fixed footer on all pages and made buttons align in all screens cityPage

--- a/src/city.css
+++ b/src/city.css
@@ -16,6 +16,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  
 }
 
 .a-city:link {
@@ -60,6 +61,7 @@
   border: 1px black solid;
   border-radius: 10px;
   max-width: 500px;
+  min-width: 300px;
   padding: 10px 20px;
   margin: 10px;
   display: flex;
@@ -79,6 +81,7 @@
 .part2 {
   display: flex;
   justify-content: flex-end;
+  align-items: flex-end;
   flex-direction: column;
   padding-left: 50px;
   padding-top: 5px;
